Fix Jwt config, provider and auth filter